chore(lib): updated swagger.
