# api-server/routes/config.js
@@ -6,7 +6,7 @@ const axios = require('axios');
 router.get('/git', async (req, res, next) => {
   // #swagger.tags = ['Config']
   // #swagger.summary = 'Fetch raw data from hwakabh/dotfiles'
-  // #swagger.description = '/api/v1/_config'
+  // #swagger.description = '/api/v1/_config/git'
   const url = 'https://raw.githubusercontent.com/hwakabh/dotfiles/refs/heads/main/gitconf/.gitconfig';
   const gitconfig = await axios.get(url)
     .then(response => {
@@ -26,7 +26,7 @@ router.get('/git', async (req, res, next) => {
 router.get('/bashrc', async (req, res, next) => {
   // #swagger.tags = ['Config']
   // #swagger.summary = 'Fetch raw data from hwakabh/dotfiles'
-  // #swagger.description = '/api/v1/_config'
+  // #swagger.description = '/api/v1/_config/bashrc'
   const url = 'https://raw.githubusercontent.com/hwakabh/dotfiles/refs/heads/main/bash/.bashrc';
   const bashrc = await axios.get(url)
     .then(response => {
